--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     </head>
     <body>
         <p id="description">
-            Microsoft Print to PDFのタイトルの文字化けはUnicodeの上二桁をないものとして下二桁のみを読んでいるものと仮定して、それを復元するためのツールです。この仮定は必ずしも正しくないようです。選択肢を並べ替えるための漢字のデータは<a href="http://attosoft.info/tools/kanji-checker/">総合漢字チェッカー | 常用漢字や教育漢字などをまとめてチェック | attosoft.info</a>さんからお借りしました。
+            Microsoft Print to PDFのタイトルの文字化けはおおよそUnicodeの下2桁のみにキャストしており、それを復元するためのツールです。ただし下2桁が0x10, 0x13の場合はそれぞれ\n, \rになるため<a href="#0x20">0x20</a>にキャストされています。また<a href="#0xc6">0xc6</a>以上はキャストされません。選択肢を並べ替えるための漢字のデータは<a href="http://attosoft.info/tools/kanji-checker/">総合漢字チェッカー | 常用漢字や教育漢字などをまとめてチェック | attosoft.info</a>さんからお借りしました。
         </p>
         <p>
-            <input type="text" id="input" onChange="make_candidates(this.value);" value="Microsoft Print to PDF 文字化け">
+            <input type="text" id="input" onChange="table_candidates(this.value);" value="Microsoft Print to PDF 文字化け">
         </p>
         <p id="output"></p>
-        <table id="table"></table>
+        <table id="candidates"></table>
+        <b>0x20</b>
+        <table id="0x20"></table>
+        <b>0xc6</b>
+        <table id="0xc6"></table>
     </body>
     <script src="./script.js"></script>
 </html>
